HLS-3: Major refactor to clean up code and better follow RFC8216
Additionally:
- Simplify GUI no longer requiring video type (now auto detected from playlist) or protocol
- Fix segment relative url resolution, now using playlist base url instead of master base url
- Avoid querying twice playlist when provided url is media playlist
- Fix clear of GUI when a new sampler is created
- Fix parsing of playlist when carriage returns are present on playlist
- Proper detection of end for VOD, event streams and live streams according to RFC8216
- Reduced memory foot print only keeping segment sequence number instead of list of segments to resume download
- Reuse of HTTPSampler features bringing proper support for cookies, cache, headers, etc
- Standardized and fixed sample results for all requests.
- Easier identification of sample results with proper naming according to RFC8216
- Proper handling of unsuccessful requests for master and media playlists stopping iteration and reporting the issue.
- Implement unit tests for major features of plugin
- Change plugin name to follow other blazemeter plugins convention and fix version number