@@ -1,138 +1,81 @@
 package com.blazemeter.jmeter.hls.logic;
 
-import com.google.common.annotations.VisibleForTesting;
-import java.io.IOException;
 import java.net.MalformedURLException;
-import java.net.URL;
-import java.util.ArrayList;
-import java.util.List;
+import java.net.URI;
+import java.util.Iterator;
+import java.util.function.Consumer;
+import java.util.function.Function;
 import org.apache.jmeter.protocol.http.control.CacheManager;
 import org.apache.jmeter.protocol.http.control.CookieManager;
-import org.apache.jmeter.protocol.http.control.Header;
 import org.apache.jmeter.protocol.http.control.HeaderManager;
-import org.apache.jmeter.protocol.http.util.HTTPConstants;
-import org.apache.jmeter.samplers.AbstractSampler;
-import org.apache.jmeter.samplers.Entry;
+import org.apache.jmeter.protocol.http.sampler.HTTPSampleResult;
+import org.apache.jmeter.protocol.http.sampler.HTTPSampler;
 import org.apache.jmeter.samplers.SampleEvent;
 import org.apache.jmeter.samplers.SampleResult;
-import org.apache.jmeter.testelement.TestElement;
-import org.apache.jmeter.testelement.property.CollectionProperty;
-import org.apache.jmeter.testelement.property.JMeterProperty;
-import org.apache.jmeter.testelement.property.TestElementProperty;
 import org.apache.jmeter.threads.JMeterContext;
 import org.apache.jmeter.threads.JMeterThread;
 import org.apache.jmeter.threads.JMeterVariables;
 import org.apache.jmeter.threads.SamplePackage;
-
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-public class HlsSampler extends AbstractSampler {
+public class HlsSampler extends HTTPSampler {
 
   private static final Logger LOG = LoggerFactory.getLogger(HlsSampler.class);
 
-  private static final String URL_DATA_PROPERTY_NAME = "HLS.URL_DATA";
-  private static final String RES_DATA_PROPERTY_NAME = "HLS.RES_DATA";
-  private static final String NET_DATA_PROPERTY_NAME = "HLS.NET_DATA";
-  private static final String SECONDS_DATA_PROPERTY_NAME = "HLS.SECONDS_DATA";
-  private static final String DURATION_PROPERTY_NAME = "HLS.DURATION";
-  private static final String VIDEO_TYPE_PROPERTY_NAME = "HLS.VIDEOTYPE";
+  private static final String MASTER_URL_PROPERTY_NAME = "HLS.URL_DATA";
+  private static final String CUSTOM_RESOLUTION_PROPERTY_NAME = "HLS.RES_DATA";
+  private static final String CUSTOM_BANDWIDTH_PROPERTY_NAME = "HLS.NET_DATA";
+  private static final String PLAY_SECONDS_PROPERTY_NAME = "HLS.SECONDS_DATA";
+  private static final String PLAY_VIDEO_DURATION_PROPERTY_NAME = "HLS.DURATION";
   private static final String RESOLUTION_TYPE_PROPERTY_NAME = "HLS.RESOLUTION_TYPE";
   private static final String BANDWIDTH_TYPE_PROPERTY_NAME = "HLS.BANDWIDTH_TYPE";
-  private static final String PROTOCOL_PROPERTY_NAME = "HLS.PROTOCOL";
   private static final String RESUME_DOWNLOAD_PROPERTY_NAME = "HLS.RESUME_DOWNLOAD";
 
   private static final String HEADER_MANAGER = "HLSRequest.header_manager";
   private static final String COOKIE_MANAGER = "HLSRequest.cookie_manager";
   private static final String CACHE_MANAGER = "HLSRequest.cache_manager";
 
-  private ArrayList<String> fragmentsDownloaded;
-  private Parser parser;
+  private final Function<URI, SampleResult> uriSampler;
+  private final Consumer<SampleResult> sampleResultNotifier;
 
-  private String masterListResponse;
-  private long totalSentBytes;
+  private long lastSegmentNumber = -1;
 
   public HlsSampler() {
     setName("HLS Sampler");
-    parser = new Parser();
-    fragmentsDownloaded = new ArrayList<>();
+    uriSampler = this::downloadUri;
+    sampleResultNotifier = this::notifySampleListeners;
   }
 
-  @VisibleForTesting
-  public void setParser(Parser p) {
-    parser = p;
+  public HlsSampler(Function<URI, SampleResult> uriSampler,
+      Consumer<SampleResult> sampleResultNotifier) {
+    setName("HLS Sampler");
+    this.uriSampler = uriSampler;
+    this.sampleResultNotifier = sampleResultNotifier;
   }
 
-  public String getURLData() {
-    return this.getPropertyAsString(URL_DATA_PROPERTY_NAME);
+  public String getMasterUrl() {
+    return this.getPropertyAsString(MASTER_URL_PROPERTY_NAME);
   }
 
-  public void setURLData(String url) {
-    this.setProperty(URL_DATA_PROPERTY_NAME, url);
+  public void setMasterUrl(String url) {
+    this.setProperty(MASTER_URL_PROPERTY_NAME, url);
   }
 
-  public String getResData() {
-    return this.getPropertyAsString(RES_DATA_PROPERTY_NAME);
+  public boolean isPlayVideoDuration() {
+    return this.getPropertyAsBoolean(PLAY_VIDEO_DURATION_PROPERTY_NAME);
   }
 
-  public void setResData(String res) {
-    this.setProperty(RES_DATA_PROPERTY_NAME, res);
+  public void setPlayVideoDuration(boolean res) {
+    this.setProperty(PLAY_VIDEO_DURATION_PROPERTY_NAME, res);
   }
 
-  public String getNetwordData() {
-    return this.getPropertyAsString(NET_DATA_PROPERTY_NAME);
+  public String getPlaySeconds() {
+    return this.getPropertyAsString(PLAY_SECONDS_PROPERTY_NAME);
   }
 
-  public void setNetworkData(String net) {
-    this.setProperty(NET_DATA_PROPERTY_NAME, net);
-  }
-
-  public String getPlaySecondsData() {
-    return this.getPropertyAsString(SECONDS_DATA_PROPERTY_NAME);
-  }
-
-  public void setPlaySecondsData(String seconds) {
-    this.setProperty(SECONDS_DATA_PROPERTY_NAME, seconds);
-  }
-
-  public boolean getVideoDuration() {
-    return this.getPropertyAsBoolean(DURATION_PROPERTY_NAME);
-  }
-
-  public void setVideoDuration(boolean res) {
-    this.setProperty(DURATION_PROPERTY_NAME, res);
-  }
-
-  public VideoType getVideoType() {
-    return VideoType.fromString(this.getPropertyAsString(VIDEO_TYPE_PROPERTY_NAME));
-  }
-
-  public void setVideoType(VideoType type) {
-    this.setProperty(VIDEO_TYPE_PROPERTY_NAME, type.toString());
-  }
-
-  public ResolutionOption getResolutionType() {
-    return ResolutionOption.fromString(this.getPropertyAsString(RESOLUTION_TYPE_PROPERTY_NAME));
-  }
-
-  public void setResolutionType(ResolutionOption type) {
-    this.setProperty(RESOLUTION_TYPE_PROPERTY_NAME, type.toString());
-  }
-
-  public BandwidthOption getBandwidthType() {
-    return BandwidthOption.fromString(this.getPropertyAsString(BANDWIDTH_TYPE_PROPERTY_NAME));
-  }
-
-  public void setBandwidthType(BandwidthOption type) {
-    this.setProperty(BANDWIDTH_TYPE_PROPERTY_NAME, type.toString());
-  }
-
-  public String getProtocol() {
-    return this.getPropertyAsString(PROTOCOL_PROPERTY_NAME);
-  }
-
-  public void setProtocol(String protocolValue) {
-    this.setProperty(PROTOCOL_PROPERTY_NAME, protocolValue);
+  public void setPlaySeconds(String seconds) {
+    this.setProperty(PLAY_SECONDS_PROPERTY_NAME, seconds);
   }
 
   public boolean getResumeVideoStatus() {
@@ -143,313 +86,130 @@ public class HlsSampler extends AbstractSampler {
     this.setProperty(RESUME_DOWNLOAD_PROPERTY_NAME, res);
   }
 
+  public ResolutionSelector getResolutionSelector() {
+    return ResolutionSelector
+        .fromStringAndCustomResolution(getPropertyAsString(RESOLUTION_TYPE_PROPERTY_NAME),
+            getPropertyAsString(CUSTOM_RESOLUTION_PROPERTY_NAME));
+  }
+
+  public void setResolutionSelector(ResolutionSelector selector) {
+    setProperty(RESOLUTION_TYPE_PROPERTY_NAME, selector.getName());
+    setProperty(CUSTOM_RESOLUTION_PROPERTY_NAME, selector.getCustomResolution());
+  }
+
+  public BandwidthSelector getBandwidthSelector() {
+    String bandwidth = getPropertyAsString(CUSTOM_BANDWIDTH_PROPERTY_NAME);
+    return BandwidthSelector
+        .fromStringAndCustomBandwidth(getPropertyAsString(BANDWIDTH_TYPE_PROPERTY_NAME),
+            bandwidth != null && !bandwidth.isEmpty() ? Integer.valueOf(bandwidth) : null);
+  }
+
+  public void setBandwidthSelector(BandwidthSelector selector) {
+    setProperty(BANDWIDTH_TYPE_PROPERTY_NAME, selector.getName());
+    Integer bandwidth = selector.getCustomBandwidth();
+    setProperty(CUSTOM_BANDWIDTH_PROPERTY_NAME, bandwidth != null ? bandwidth.toString() : null);
+  }
+
+  // implemented for backwards compatibility
   @Override
-  public SampleResult sample(Entry e) {
-    SampleResult masterListSampler;
-    boolean isVod = getVideoType() == VideoType.VOD;
-
-    totalSentBytes = 0L;
-    int totalHeaderSize = 0;
-    long totalBodySize = 0L;
-
-    SampleResult transactionResult;
-    try {
-      masterListSampler = downloadMasterList(parser);
-      notifySampleListeners(masterListSampler);
-
-      transactionResult = generateTransactionResult(masterListSampler);
-
-      totalSentBytes += masterListSampler.getSentBytes();
-      totalHeaderSize += masterListSampler.getHeadersSize();
-      totalBodySize += masterListSampler.getBodySizeAsLong();
-
-      String masterListBaseUrl = getMasterURL();
-      String playListURL = getPlaylistURL(masterListResponse, parser);
-
-      int playSeconds = 0;
-      if (!getPlaySecondsData().isEmpty()) {
-        playSeconds = Integer.parseInt(getPlaySecondsData());
-      }
-
-      boolean firstTime = true;
-      boolean out = false;
-
-      if (!this.getResumeVideoStatus()) {
-        this.fragmentsDownloaded.clear();
-      }
-
-      float currentTimeInSeconds = 0;
-      while ((playSeconds >= currentTimeInSeconds) && !out) {
-        SampleResult playListSampleResult = new SampleResult();
-        DataRequest playList = getPlayList(playListSampleResult, parser, playListURL);
-
-        playListSampleResult.setSampleLabel(this.getName() + " - " + "playlist");
-        notifySampleListeners(playListSampleResult);
-
-        totalBodySize += playListSampleResult.getBodySizeAsLong();
-        totalHeaderSize += playListSampleResult.getHeadersSize();
-        totalSentBytes += playListSampleResult.getSentBytes();
-
-        List<DataFragment> videoUrl = parser.extractVideoUrl(playList.getResponse());
-        List<DataFragment> fragmentsToDownload = new ArrayList<>();
-
-        if (firstTime) {
-          if ((getVideoType() == VideoType.LIVE && (parser.isLive(playList.getResponse())))
-              || (isVod && !parser.isLive(playList.getResponse()))
-              || (getVideoType() == VideoType.EVENT && parser.isLive(playList.getResponse()))) {
-            firstTime = false;
-            out = isVod;
-          }
-        }
-
-        int fragmentNumber = 0;
-        while ((!videoUrl.isEmpty()) && (playSeconds >= currentTimeInSeconds)) {
-          DataFragment frag = videoUrl.remove(0);
-
-          if (!fragmentsDownloaded.contains(frag.getTsUri().trim())) {
-            fragmentNumber++;
-            frag.setFragmentNumber(fragmentNumber);
-            fragmentsToDownload.add(frag);
-            fragmentsDownloaded.add(frag.getTsUri().trim());
-
-            if (getVideoDuration()) {
-              currentTimeInSeconds += Float.parseFloat(frag.getDuration());
-            }
-          }
-        }
-
-        fragmentsToDownload.forEach(f -> downloadFragment(parser, f, masterListBaseUrl,
-            playListURL));
-      }
-
-    } catch (IOException ex) {
-      LOG.error("Problem while getting video from {}", getURLData(), ex);
-      transactionResult = new SampleResult();
-      transactionResult.sampleEnd();
-      transactionResult.setSuccessful(false);
-      transactionResult.setResponseMessage("Exception: " + ex);
-    }
-    transactionResult.setSentBytes(totalSentBytes);
-    transactionResult.setHeadersSize(totalHeaderSize);
-    transactionResult.setBodySize(totalBodySize);
-
-    return transactionResult;
+  public CookieManager getCookieManager() {
+    CookieManager ret = (CookieManager) getProperty(COOKIE_MANAGER).getObjectValue();
+    return ret != null ? ret : super.getCookieManager();
   }
 
-  private SampleResult generateTransactionResult(SampleResult masterListSampler) {
-    SampleResult transactionResult = new SampleResult();
-
-    transactionResult.setRequestHeaders(masterListSampler.getRequestHeaders());
-    transactionResult.setSuccessful(masterListSampler.isSuccessful());
-    transactionResult.setResponseMessage(masterListSampler.getResponseMessage());
-    transactionResult.setSampleLabel(this.getName() + " - transaction");
-    transactionResult.setResponseHeaders(masterListSampler.getResponseHeaders());
-    transactionResult.setResponseData(masterListSampler.getResponseData());
-    transactionResult.setResponseCode(masterListSampler.getResponseCode());
-    transactionResult.setContentType(masterListSampler.getContentType());
-    transactionResult
-        .setBytes(masterListSampler.getSentBytes());
-    transactionResult.setHeadersSize(masterListSampler.getHeadersSize());
-    transactionResult.setSentBytes(masterListSampler.getSentBytes());
-    transactionResult.setDataEncoding(masterListSampler.getDataEncodingNoDefault());
-
-    return transactionResult;
+  // implemented for backwards compatibility
+  @Override
+  public HeaderManager getHeaderManager() {
+    HeaderManager ret = (HeaderManager) getProperty(HEADER_MANAGER).getObjectValue();
+    return ret != null ? ret : super.getHeaderManager();
   }
 
-  private SampleResult downloadMasterList(Parser parser) throws IOException {
-
-    SampleResult masterResult = new SampleResult();
-
-    masterResult.sampleStart();
-    DataRequest respond = parser.getBaseUrl(new URL(getURLData()), masterResult, true);
-    masterResult.sampleEnd();
-
-    masterListResponse = respond.getResponse();
-
-    masterResult.setRequestHeaders(
-        respond.getRequestHeaders() + "\n\n" + getCookieHeader(getURLData()) + "\n\n"
-            + getRequestHeader(this.getHeaderManager()));
-    masterResult.setSuccessful(respond.isSuccess());
-    masterResult.setResponseMessage(respond.getResponseMessage());
-    masterResult.setSampleLabel(this.getName() + " - master list");
-    masterResult.setResponseHeaders(respond.getHeadersAsString());
-    masterResult.setResponseData(respond.getResponse().getBytes());
-    masterResult.setResponseCode(respond.getResponseCode());
-    masterResult.setContentType(respond.getContentType());
-    masterResult
-        .setBytes(masterResult.getBytesAsLong() + (long) masterResult.getRequestHeaders().length());
-    masterResult.setHeadersSize(getHeaderBytes(masterResult, respond));
-    masterResult.setSentBytes(respond.getSentBytes());
-    masterResult.setDataEncoding(respond.getContentEncoding());
-
-    return masterResult;
+  // implemented for backwards compatibility
+  @Override
+  public CacheManager getCacheManager() {
+    CacheManager ret = (CacheManager) getProperty(CACHE_MANAGER).getObjectValue();
+    return ret != null ? ret : super.getCacheManager();
   }
 
-  private int getHeaderBytes(SampleResult masterResult, DataRequest respond) {
-    return masterResult.getResponseHeaders().length() // condensed length (without \r)
-        + respond.getHeaders().size() // Add \r for each header
-        + 1  // Add \r for initial header
-        + 2; // final \r\n before data
-  }
-
-  private String getCookieHeader(String urlData) throws MalformedURLException {
-    URL url = new URL(urlData);
-    // Extracts all the required cookies for that particular URL request
-    if (getCookieManager() != null) {
-      String cookieHeader = getCookieManager().getCookieHeaderForURL(url);
-      if (cookieHeader != null) {
-        return HTTPConstants.HEADER_COOKIE + ": " + cookieHeader + "\n";
-      }
-    }
-    return "";
-  }
-
-  private CookieManager getCookieManager() {
-    return (CookieManager) getProperty(COOKIE_MANAGER).getObjectValue();
-  }
-
-  private HeaderManager getHeaderManager() {
-    return (HeaderManager) getProperty(HlsSampler.HEADER_MANAGER).getObjectValue();
-  }
-
-  private String getRequestHeader(
-      org.apache.jmeter.protocol.http.control.HeaderManager headerManager) {
-    StringBuilder headerString = new StringBuilder();
-
-    if (headerManager != null) {
-      CollectionProperty headers = headerManager.getHeaders();
-      if (headers != null) {
-        for (JMeterProperty jMeterProperty : headers) {
-          Header header =
-              (org.apache.jmeter.protocol.http.control.Header) jMeterProperty.getObjectValue();
-          String n = header.getName();
-          if (!HTTPConstants.HEADER_CONTENT_LENGTH.equalsIgnoreCase(n)) {
-            String v = header.getValue();
-            v = v.replaceFirst(":\\d+$", "");
-            headerString.append(n).append(": ").append(v).append("\n");
-          }
-        }
-      }
+  @Override
+  public SampleResult sample() {
+    if (!this.getResumeVideoStatus()) {
+      lastSegmentNumber = -1;
     }
 
-    return headerString.toString();
-  }
-
-  private String getPlaylistURL(String playlistData, Parser parser)
-      throws MalformedURLException {
-    URL masterURL = new URL(getURLData());
-    String customBandwidth = this.getNetwordData();
-
-    String playlistUri = parser.extractMediaUrl(playlistData, this.getResData(),
-        customBandwidth != null && !customBandwidth.isEmpty() ? Integer.valueOf(customBandwidth)
-            : null,
-        this.getBandwidthType(), this.getResolutionType());
-    String auxPath = masterURL.getPath().substring(0, masterURL.getPath().lastIndexOf('/') + 1);
-
-    if (playlistUri == null) {
-      playlistUri = getURLData();
+    URI masterUri = URI.create(getMasterUrl());
+    SampleResult masterListResult = download(masterUri, "master playlist");
+    if (!masterListResult.isSuccessful()) {
+      LOG.error("Problem downloading master list {}", masterUri);
+      return null;
     }
 
-    String playListURL;
-    if (playlistUri.startsWith("http")) {
-      playListURL = playlistUri;
-    } else if (playlistUri.indexOf('/') == 0) {
-      playListURL = getBaseUrl(masterURL) + playlistUri; // "https://"
+    Playlist masterPlaylist = Playlist
+        .fromUriAndBody(masterUri, masterListResult.getResponseDataAsString());
+    URI mediaPlaylistUri = masterPlaylist
+        .solveMediaPlaylistUri(getResolutionSelector(), getBandwidthSelector());
+    Playlist mediaPlaylist;
+    if (!mediaPlaylistUri.equals(masterUri)) {
+      SampleResult playListResult = download(mediaPlaylistUri, "media playlist");
+      if (!playListResult.isSuccessful()) {
+        LOG.error("Problem downloading playlist list {}", mediaPlaylistUri);
+        return null;
+      }
+      mediaPlaylist = Playlist
+          .fromUriAndBody(mediaPlaylistUri, playListResult.getResponseDataAsString());
     } else {
-      playListURL = getBaseUrl(masterURL) + auxPath + playlistUri;
-    }
-    return playListURL;
-  }
-
-  private String getMasterURL() throws MalformedURLException {
-    URL masterURL = new URL(getURLData());
-    String auxPath = masterURL.getPath().substring(0, masterURL.getPath().lastIndexOf('/') + 1);
-    auxPath = getBaseUrl(masterURL) + auxPath;
-    return auxPath;
-  }
-
-  private String getBaseUrl(URL masterURL) {
-    return getProtocol() + "://" + masterURL.getHost() +
-        (masterURL.getPort() > 0 ? ":" + masterURL.getPort() : "");
-  }
-
-  private DataRequest getPlayList(SampleResult playListResult, Parser parser,
-                                  String playListURL) throws IOException {
-    playListResult.sampleStart();
-    DataRequest subRespond = parser.getBaseUrl(new URL(playListURL), playListResult, true);
-    playListResult.sampleEnd();
-
-    String lastPath = playListURL.split("/")[playListURL.split("/").length - 1];
-
-    playListResult.setRequestHeaders(
-        subRespond.getRequestHeaders() + "\n\n" + getCookieHeader(playListURL) + "\n\n"
-            + getRequestHeader(this.getHeaderManager()));
-    playListResult.setSuccessful(subRespond.isSuccess());
-    playListResult.setResponseMessage(subRespond.getResponseMessage());
-    playListResult.setSampleLabel(this.getName() + " - " + lastPath);
-    playListResult.setResponseHeaders(subRespond.getHeadersAsString());
-    playListResult.setResponseData(subRespond.getResponse().getBytes());
-    playListResult.setResponseCode(subRespond.getResponseCode());
-    playListResult.setContentType(subRespond.getContentType());
-    playListResult.setBytes(
-        playListResult.getBytesAsLong() + (long) playListResult.getRequestHeaders().length());
-    playListResult.setHeadersSize(getHeaderBytes(playListResult, subRespond));
-    playListResult.setSentBytes(subRespond.getSentBytes());
-    playListResult.setDataEncoding(subRespond.getContentEncoding());
-
-    return subRespond;
-  }
-
-  private void downloadFragment(Parser parser, DataFragment fragment, String baseUrl,
-                                String playlist) {
-    SampleResult result = new SampleResult();
-    String uriString = fragment.getTsUri();
-    if ((baseUrl != null) && (!uriString.startsWith("http"))) {
-      uriString = baseUrl + uriString;
+      mediaPlaylist = masterPlaylist;
     }
 
-    result.sampleStart();
+    int playSeconds =
+        isPlayVideoDuration() && !getPlaySeconds().isEmpty() ? Integer.parseInt(getPlaySeconds())
+            : 0;
+    float consumedSeconds = 0;
+    boolean playListEnd;
 
-    String lastPath = playlist.split("/")[playlist.split("/").length - 1];
+    do {
+      Iterator<MediaSegment> mediaSegmentsIt = mediaPlaylist.getMediaSegments().iterator();
+      while (mediaSegmentsIt.hasNext() && !playedRequestedTime(playSeconds, consumedSeconds)) {
+        MediaSegment segment = mediaSegmentsIt.next();
+        long segmentSequenceNumber = segment.getSequenceNumber();
+        if (segmentSequenceNumber > lastSegmentNumber) {
+          download(segment.getUri(), "segment " + segmentSequenceNumber);
+          lastSegmentNumber = segmentSequenceNumber;
+          consumedSeconds += segment.getDurationSeconds();
+        }
+      }
+      playListEnd = mediaPlaylist.hasEnd() && !mediaSegmentsIt.hasNext();
+      if (!playedRequestedTime(playSeconds, consumedSeconds) && !playListEnd) {
+        SampleResult playListResult = download(mediaPlaylistUri, "media playlist");
+        if (!playListResult.isSuccessful()) {
+          LOG.error("Problem downloading playlist list {}", mediaPlaylistUri);
+          return null;
+        }
+        mediaPlaylist = Playlist
+            .fromUriAndBody(mediaPlaylistUri, playListResult.getResponseDataAsString());
+      }
+    } while (!playedRequestedTime(playSeconds, consumedSeconds) && !playListEnd);
+    return null;
+  }
 
+  private SampleResult download(URI uri, String name) {
+    SampleResult result = uriSampler.apply(uri);
+    result.setSampleLabel(getName() + " - " + name);
+    sampleResultNotifier.accept(result);
+    return result;
+  }
+
+  private HTTPSampleResult downloadUri(URI uri) {
     try {
-      DataRequest respond = parser.getBaseUrl(new URL(uriString), result, false);
-
-      result.sampleEnd();
-
-      result.setRequestHeaders(
-          respond.getRequestHeaders() + "\n\n" + getCookieHeader(uriString) + "\n\n"
-              + getRequestHeader(this.getHeaderManager()));
-      result.setSuccessful(respond.isSuccess());
-      result.setResponseMessage(respond.getResponseMessage());
-      result.setSampleLabel(this.getName() + " - " + lastPath + " - " +
-          fragment.getFragmentNumber());
-      result.setResponseHeaders("URL: " + uriString + "\n" + respond.getHeadersAsString());
-      result.setResponseCode(respond.getResponseCode());
-      result.setContentType(respond.getContentType());
-      result.setBytes(result.getBytesAsLong() + (long) result.getRequestHeaders().length());
-      result.setHeadersSize(getHeaderBytes(result, respond));
-      result.setSentBytes(respond.getSentBytes());
-      result.setDataEncoding(respond.getContentEncoding());
-
-      totalSentBytes += respond.getSentBytes();
-
-    } catch (IOException e) {
-      LOG.error("Problem while getting fragments from {}", baseUrl, e);
-      result.sampleEnd();
-      result.setSuccessful(false);
-      result.setResponseMessage("Exception: " + e);
-      result.setSampleLabel(this.getName() + " - " + lastPath + " - " +
-          fragment.getFragmentNumber());
+      return sample(uri.toURL(), "GET", false, 0);
+    } catch (MalformedURLException e) {
+      throw new IllegalArgumentException(e);
     }
-
-    notifySampleListeners(result);
   }
 
   private void notifySampleListeners(SampleResult sampleResult) {
     JMeterContext threadContext = getThreadContext();
     JMeterVariables threadContextVariables = threadContext.getVariables();
-
     if (threadContextVariables != null) {
       SamplePackage pack = (SamplePackage) threadContext.getVariables()
           .getObject(JMeterThread.PACKAGE_OBJECT);
@@ -459,63 +219,8 @@ public class HlsSampler extends AbstractSampler {
     }
   }
 
-  @Override
-  public void addTestElement(TestElement el) {
-    if (el instanceof HeaderManager) {
-      setHeaderManager((HeaderManager) el);
-    } else if (el instanceof CookieManager) {
-      setCookieManager((CookieManager) el);
-    } else if (el instanceof CacheManager) {
-      setCacheManager((CacheManager) el);
-    } else {
-      super.addTestElement(el);
-    }
-  }
-
-  private void setHeaderManager(HeaderManager value) {
-    HeaderManager mgr = getHeaderManager();
-    if (mgr != null) {
-      value = mgr.merge(value, true);
-      if (LOG.isDebugEnabled()) {
-        LOG.debug("Existing HeaderManager '{}' merged with '{}'", mgr.getName(), value.getName());
-        for (int i = 0; i < value.getHeaders().size(); i++) {
-          LOG.debug("    {}={}", value.getHeader(i).getName(), value.getHeader(i).getValue());
-        }
-      }
-    }
-    setProperty(new TestElementProperty(HEADER_MANAGER, value));
-  }
-
-  private void setCookieManager(CookieManager value) {
-    CookieManager mgr = getCookieManager();
-    if (mgr != null) {
-      LOG.warn("Existing CookieManager {} superseded by {}", mgr.getName(), value.getName());
-    }
-    setCookieManagerProperty(value);
-  }
-
-  // private method to allow AsyncSample to reset the value without performing
-  // checks
-  private void setCookieManagerProperty(CookieManager value) {
-    setProperty(new TestElementProperty(COOKIE_MANAGER, value));
-  }
-
-  private void setCacheManager(CacheManager value) {
-    CacheManager mgr = getCacheManager();
-    if (mgr != null) {
-      LOG.warn("Existing CacheManager {} superseded by {}", mgr.getName(), value.getName());
-    }
-    setCacheManagerProperty(value);
-  }
-
-  private CacheManager getCacheManager() {
-    return (CacheManager) getProperty(CACHE_MANAGER).getObjectValue();
-  }
-
-  // private method to allow AsyncSample to reset the value without performing
-  // checks
-  private void setCacheManagerProperty(CacheManager value) {
-    setProperty(new TestElementProperty(CACHE_MANAGER, value));
+  private boolean playedRequestedTime(int playSeconds, float consumedSeconds) {
+    return playSeconds != 0 && playSeconds <= consumedSeconds;
   }
 
 }
